# inkblink

./: .gitignore  :w  Dockerfile  data.db  docker-compose.dev.yml  docker-compose.yml  init-db.sh  legatio.md  package.json  servers.json  start.sh  traefik.compose.yml  traefik.dev.yml  traefik.yml  vite.config.ts
ib-backend/: Cargo.toml  Dockerfile
ib-backend/migrations/: init.sql  schema-init.sql
ib-backend/src/: auth.rs  db.rs  handlers.rs  main.rs  model.rs  models.rs  schema.rs
inkblink/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
inkblink/src/: App.tsx  prev.css  stripe.ts
inkblink/src/api/: apiClient.ts
inkblink/src/components/: InkBlobs.tsx  TweetCard.tsx  accordion.tsx  login-form.tsx
inkblink/src/context/: AuthContext.tsx
inkblink/src/lib/: db.ts  firebase.ts  image-generation.ts
inkblink/src/pages/: Create.tsx  Dashboard.tsx  Home.tsx  Signup.tsx
inkblink/src/routes/: AuthContext.tsx  Navbar.tsx  ProtectedRoute.tsx
src/: App.tsx  index.css
src/components/: ImageTextSection.tsx  accordion.tsx
src/lib/: auth.ts  supabase.ts
src/pages/: Create.tsx  Features.tsx  Home.tsx  Payment.tsx  Pricing.tsx  Signup.tsx
src/routes/: Navbar.tsx  ProtectedRoute.tsx
