[package]
name = "ib-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.6"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
time = "0.3.39"
dotenv = "0.15.0"
