[package]
name = "ib-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.6"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls" , "postgres", "uuid", "chrono", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }

