[package]
name = "ib-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.6"

# DB
rusqlite = { version = "0.34.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.27.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
diesel = {version="2.2.7", features=["r2d2","postgres"]}

thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde"] }
reqwest = { version = "0.12.14", features = ["blocking", "json", "multipart"] }


